Set default branch to main in cmake, comment on windows support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,9 +36,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # projects included in this one by FetchContent.
 #
 set(TRITON_COMMON_REPO_TAG "main" CACHE STRING "Tag for triton-inference-server/common repo")
-# TODO: Set branch back to main when merged
-set(TRITON_CORE_REPO_TAG "rmccormick-cache-api" CACHE STRING "Tag for triton-inference-server/core repo")
-#set(TRITON_CORE_REPO_TAG "main" CACHE STRING "Tag for triton-inference-server/core repo")
+set(TRITON_CORE_REPO_TAG "main" CACHE STRING "Tag for triton-inference-server/core repo")
 
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
@@ -105,6 +103,7 @@ target_link_libraries(
     triton-common-logging   # from repo-common
 )
 
+# TODO: Windows support
 set_target_properties(
   triton-local-cache PROPERTIES
   POSITION_INDEPENDENT_CODE ON
